--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "Generator tool for creating extensions for Blackberry.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "bin": {
+      "create-blackberry-extension": "bin/index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/blackberryeditor/create-blackberry-extension.git"
   },
   "author": "frqstbite",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/blackberryeditor/create-blackberry-extension/issues"
   },
