--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Generator tool for creating extensions for Blackberry.",
   "main": "index.js",
   "bin": {
-      "create-blackberry-extension": "bin/index.js"
+    "create-blackberry-extension": "bin/index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/blackberryeditor/create-blackberry-extension/issues"
   },
-  "homepage": "https://github.com/blackberryeditor/create-blackberry-extension#readme"
+  "homepage": "https://github.com/blackberryeditor/create-blackberry-extension#readme",
+  "devDependencies": {
+    "@types/prompt": "^1.1.5",
+    "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "prompt": "^1.3.0"
+  }
 }
